feat(web): allow seller to upload product images
